--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,9 @@ body{/*this is also mostly paralax setup*/
 	border: 1px solid grey;
 	z-index: 3;
 }
+.popupItem h2{
+	font-size: 1.5em;
+}
 h2{
 	font-size: 3em;
 	font-family: Helvetica;
